--- a/styles/custom.css
+++ b/styles/custom.css
@@ -510,14 +510,13 @@
 .addon-buttons__cotainer {
     position: fixed;
     bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    right: 20px;
     z-index: 900;
-    display: flex;
+    padding: 0px;
+    display: inline-flex;
     flex-direction: column-reverse;
     align-items: flex-end;
     gap: 20px;
-    width: 100%;
     background-color: transparent;
 }
 
